Flyttade requirements, la till ir_measures

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ python-docx
 faiss-cpu
 numpy
 --extra-index-url https://download.pytorch.org/whl/cu118
-torch==2.3.1+cu118 #for windows?
-#torch #for mac
+#torch==2.3.1+cu118 #for windows?
+torch #for mac
 transformers
 flask
-ranx
+ir-measures
