Ändrade readme+requirements för mac

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,13 @@ python-docx
 faiss-cpu
 numpy
 --extra-index-url https://download.pytorch.org/whl/cu118
-#torch==2.3.1+cu118 #for windows?
-torch #for mac
+
+#for windows
+torch==2.3.1+cu118 
+
+#for mac
+#torch
+
 transformers
 flask
 ir-measures
