Enkel dummy evaluation

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,10 @@ faiss-cpu
 numpy
 --extra-index-url https://download.pytorch.org/whl/cu118
 
-#for windows
-torch==2.3.1+cu118 
-
-#for mac
-#torch
+torch==2.3.1+cu118  #for windows
+#torch #for mac
 
 transformers
 flask
 ir-measures
+pandas
